# theark

./: .flake8  .gitignore  LICENSE  README.md  check.sh  check_db.py  env.example  package-lock.json  package.json  pyproject.toml  run.sh  setup.cfg  test.sh  test_star.html  vite.config.js
.cursor/rules/: baserule.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
api/: __init__.py  app.py  auth.py  dependencies.py  literals.py
api/models/: __init__.py  auth.py  config.py  paper.py
api/routers/: __init__.py  batch.py  common.py  common_queries.py  config.py  crawler.py  main.py  papers.py  statistics.py
api/routers/papers/: __init__.py  crud.py  star.py  summary.py
api/services/: __init__.py  app_initializer.py  error_handler.py  paper_creation_service.py  paper_orchestration_service.py  paper_service.py  paper_summarization_service.py  streaming_service.py
api/utils/: error_handler.py
core/: __init__.py  config.py  constants.py  log.py  periodic_task.py  rate_limiter.py  types.py  utils.py
core/batch/: background_manager.py  state_manager.py
core/database/: __init__.py  base.py  config.py  engine.py  llm_sqlite_manager.py  migration.py  schema.py  sqlite_base.py  sqlite_manager.py  utils.py
core/database/implementations/: __init__.py
core/database/interfaces/: __init__.py  connection.py  manager.py  query_builder.py  repository.py  schema_builder.py
core/database/repository/: __init__.py  base.py  crawl_event.py  feed.py  llm.py  llm_batch.py  llm_request.py  paper.py  summary.py  summary_read.py  user.py
core/explorers/: __init__.py  historical_crawl_manager.py
core/extractors/: __init__.py  arxiv_extractor.py  base.py  exceptions.py  factory.py  universal_extractor.py
core/extractors/concrete/: __init__.py  arxiv_background_explorer.py  arxiv_crawl_manager.py  arxiv_extractor.py  arxiv_source_explorer.py  arxiv_storage_manager.py  crawl_state_manager.py  historical_crawl_manager.py
core/llm/: batch_builder.py  openai_client.py  prompts.py  response_parser.py
core/llm/applications/: __init__.py  summary.py
core/models/: __init__.py  batch.py  rows.py  summarization.py  types.py
core/models/api/: __init__.py  requests.py  responses.py  streaming.py
core/models/database/: __init__.py  arxiv.py  entities.py  tracking.py
core/models/domain/: __init__.py  arxiv.py  llm_usage_stats.py  paper.py  paper_extraction.py  paper_source.py  summary.py  task.py  user.py
core/services/: __init__.py  crawl_service.py  llm_request_tracker.py  paper_creation_service.py  paper_orchestration_service.py  paper_service.py  paper_summarization_service.py  star_service.py  statistics_service.py  stream_service.py  summarization_service.py  universal_paper_service.py
crawler/: __init__.py
crawler/arxiv/: __init__.py  client.py  constants.py  core.py  crawler.py  exceptions.py  on_demand_crawler.py  parser.py  periodic_crawler.py
crawler/database/: README.md  __init__.py  base.py  config.py  llm_db.py  llm_models.py  llm_repository.py  llm_sqlite_manager.py  models.py  repository.py  sqlite_manager.py
crawler/summarizer/: __init__.py  client.py  llm_tracker.py  models.py  openai_summarizer.py  prompt.py  service.py  summarizer.py
docs/: DEVELOPER_GUIDE.md  QUICK_REFERENCE.md
examples/: README.md  arxiv_client_demo.py  arxiv_crawler_demo.py  arxiv_url_demo.py  database_demo.py  historical_crawl_demo.py  performance_test.py  simple_crawl_demo.py  theark_demo.py
scripts/: README.md
scripts/dev/: all.sh  check.sh  test.sh
scripts/run/: start.sh
static/css/: base.css  components.css  main.css  modal.css  papers.css  responsive.css  star-button.css  variables.css
static/js/: api.js  infinite-scroll.js  main.js  paper-manager.js  ui.js  validation.js
static/js/ui/: loading-indicators.js  modal-manager.js  paper-list-manager.js  star-manager.js  statistics.js  utility-manager.js
templates/: index.html  root.html
tests/: conftest.py  shared_test_data.py
tests/api/: test_app.py
tests/api/models/: __init__.py  test_paper.py  test_streaming.py
tests/api/routers/: __init__.py  test_auth_integration.py  test_common.py  test_config.py  test_papers.py
tests/api/services/: __init__.py  test_app_initializer.py  test_paper_creation_service.py  test_paper_service.py  test_paper_summarization_service.py  test_streaming_service.py
tests/api/utils/: test_error_handler.py
tests/assets/: arxiv_responses.json  example_arxiv_response.xml  openai_responses.json
tests/core/: test_arxiv_settings.py  test_config.py  test_log.py  test_logging_integration.py  test_periodic_task.py  test_rate_limiter.py
tests/core/batch/: test_background_manager.py  test_openai_client.py  test_state_manager.py
tests/core/database/: test_engine.py  test_migration.py  test_schema.py  test_utils.py
tests/core/extractors/: test_arxiv_background_explorer.py  test_arxiv_extractor.py  test_arxiv_source_explorer.py  test_crawl_state_manager.py  test_universal_extractor.py
tests/core/models/: test_arxiv_database_models.py
tests/core/services/: __init__.py  conftest.py  test_llm_request_tracker.py  test_paper_creation_service.py  test_paper_service.py  test_paper_star_service.py  test_paper_summarization_service.py  test_star_service.py  test_statistics_service.py  test_stream_service.py  test_universal_paper_service.py
tests/crawler/: __init__.py
tests/crawler/arxiv/: __init__.py  test_client.py  test_crawler.py  test_exceptions.py  test_parser.py
tests/crawler/database/: __init__.py  conftest.py  test_config.py  test_models.py  test_repository.py  (+1 more)
tests/integration/: __init__.py  conftest.py  test_app.py  test_auth_integration.py  test_batch_integration.py  test_common.py  test_config.py  test_crawler_api.py  test_stream_paper_creation.py  test_summary_generator_integration.py
tests/performance/: test_bulk_batch_processing.py  test_bulk_operations.py
tests/unit/: test_core.py  test_database_config.py  test_database_models.py  test_logging_integration.py  test_repository.py  test_sqlite_manager.py
tests/utils/: __init__.py  test_helpers.py
(+35 files in other folders)
